# angular-bazel-starter

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  angular.json  defs.bzl  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
src/: BUILD.bazel  index.html
src/app/: app.component.spec.ts  app.component.ts
tools/: BUILD.bazel  karma.bzl  karma.conf.js  ng.bzl  ngc.esbuild.ts  test-setup.ts  ts.bzl
