load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")

# Link npm packages
npm_link_all_packages(name = "node_modules")

# The root repo tsconfig
ts_config(
    name = "tsconfig",
    src = "tsconfig.app.json",
    visibility = ["//visibility:public"],
    deps = ["tsconfig.json"],
)

ts_config(
    name = "tsconfig.spec",
    src = "tsconfig.spec.json",
    visibility = ["//visibility:public"],
    deps = ["tsconfig.json"],
)
